# k8s-playground

./: .gitignore  .laio.yaml  Tiltfile  devshell.toml  flake.nix
.github/workflows/: renovate.json  renovate.yaml
backstage/: app-config.yaml
backstage/examples/: org.yaml
crds/: product.yaml  subscriber-crd.yaml
crds/examples/: product01.yaml  subscriber01.yaml
helm/kubevela-local/: Chart.yaml
helm/kubevela-local/cue/traits/: db.cue
helm/kubevela-local/templates/: _helpers.tpl
helm/silly/templates/: app.tpl
operator/: Cargo.toml
operator/nix/: build.nix  default.nix  utils.nix
operator/src/: lib.rs  main.rs
operator/src/crd/: subscriber.rs  subscription.rs
operator/src/operator/: mod.rs  subscriber.rs
operator/src/product/: constants.rs  crd.rs  mod.rs  operator.rs
operator/src/subscriber/: constants.rs  crd.rs  mod.rs  operator.rs  shared_state.rs
operator/src/subscription/: crd.rs
operator/src/tools/: gen_crds.rs
src/helm/kafka/: values.yaml
src/helm/oam-local/cue/traits/: db.cue
src/helm/oam-local/templates/traits/: db.tpl
src/helm/silly/: Chart.yaml
src/tilt/: kafka.py  oam.py  postgres.py  vault.py
src/tilt/extensions/cloudnative-pg/: Tiltfile
src/tilt/extensions/kafka/: Tiltfile
src/tilt/extensions/oam/: Tiltfile
src/tilt/extensions/postgres/: Tiltfile
src/tilt/extensions/vault/: Tiltfile
src/tilt/vault/: init-unseal.sh  seed-secrets.sh
tilt/: oam.py  vault.py  vault_helm_deploy.py
vault/: values.yaml
