[package]
name = "operator"
description = "foo bar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde"] }

[[bin]]
name = "gen_crds"
path = "src/tools/gen_crds.rs"

[lib]
name = "operator"
path = "src/lib.rs"
